add res-const and fix some issues
